# theokit

./: .dependency-cruiser.cjs  .gitignore  .lintstagedrc.json  .ls-lint.yml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PITCH.md  README.md  SECURITY.md  deploy-evidence.jsonl  eslint.config.js  knip.json  package.json  playwright.config.ts  playwright.postgres-templates.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.changeset/: caching-and-revalidation.md  centralize-provider-strategy.md  chaos-helper-env-injection-fix.md  config.json  consolidate-react-query-subpath.md  dogfood-stranger-template-fixes.md  evolution-ci-and-dx-onda.md  finding-a-no-provider-fail-fast.md  fix-default-model-id.md  fix-openrouter-provider-routing.md  hotfix-template-peer-deps.md  pre.json  template-bump-usetheo-ui-0.12.md  template-default-chat-error-surfacing.md  template-pnpm-only-built-deps.md  template-sdk-12-fault-injection.md  theokit-peerdep-ui-0.12.md  theoui-default-integration.md  v0-2-0-exit-alpha-csrf-csp-strict.md
.claude/: ralph-loop.local.md  settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
fixtures/: README.md
fixtures/services-python-basic/services/agent/: main.py  pyproject.toml
scripts/: check-bundle-budget.sh  check-licenses.mjs  deploy-smoke-vercel.sh  dogfood-smoke.sh  load-test-baseline.json  load-test-streaming.mjs  preflight-native-bindings.d.mts  preflight-native-bindings.mjs  prevent-secrets.sh  publish-coordinated.sh  sync-template-versions.d.mts  theo-ui-link.sh  (+3 more)
(+1221 files in other folders)
