[project]
name = "services-python-basic-fixture-agent-python"
version = "0.1.0"
description = "TheoKit polyglot agent service (FastAPI sidecar)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.28",
]
